update LeetCode Biweekly Contest 164

--- a/algorithm/LeetCode/[Hard] 1776. Car Fleet II.md
+++ b/algorithm/LeetCode/[Hard] 1776. Car Fleet II.md
@@ -63,7 +63,35 @@ class Solution:
         return result
 ```
 
-**Solution 2: (Stack)**
+**Solution 2: (Stack, mono dec stack over time, backward)**
+
+__Intuition__
+There is some similar sense from the problem of 853. Car Fleet,
+we care about the time information in front of each car.
+
+
+__Explanation__
+We care about the collision time of the cars in front us.
+We iteratre from the last to the first car,
+and we main a stack of car indices,
+where their collision time is strict decreasing.
+
+Imagine a,b,c on the road
+if the a catches b later than b catched c,
+then a won't catch b but b+c.
+
+
+__Complexity__
+Time O(n)
+Space O(n)
+
+             vi                 vj
+    cars = [[3,4],[5,4],[6,3],[9,1]]
+                    x     x
+stk         321    321   32      3
+             xx
+ans         2      1     1.5    -1
+
 ```
 Runtime: 426 ms
 Memory: 129 MB
@@ -72,23 +100,26 @@ Memory: 129 MB
 class Solution {
 public:
     vector<double> getCollisionTimes(vector<vector<int>>& cars) {
-        int n = cars.size();
-        vector<int> stack;
-        vector<double> res(n, -1);
-        for (int i = n - 1; i >= 0; --i) {
-            int p = cars[i][0], s = cars[i][1];
-            while (!stack.empty()) {
-                int j = stack.back(), p2 = cars[j][0], s2 = cars[j][1];
-                if (s <= s2 || 1.0 * (p2 - p) / (s - s2) >= res[j] && res[j] > 0)
-                    stack.pop_back();
+        int n = cars.size(), i, j, pi, si, pj, sj;
+        vector<int> stk;
+        vector<double> ans(n, -1);
+        for (i = n - 1; i >= 0; --i) {
+            pi = cars[i][0];
+            si = cars[i][1];
+            while (!stk.empty()) {
+                j = stk.back();
+                pj = cars[j][0];
+                sj = cars[j][1];
+                if (si <= sj || 1.0 * (pj - pi) / (si - sj) >= ans[j] && ans[j] > 0)
+                    stk.pop_back();
                 else
                     break;
             }
-            if (!stack.empty())
-                res[i] = 1.0 * (cars[stack.back()][0] - p) / (s - cars[stack.back()][1]);
-            stack.push_back(i);
+            if (!stk.empty())
+                ans[i] = 1.0 * (cars[stk.back()][0] - pi) / (si - cars[stk.back()][1]);
+            stk.push_back(i);
         }
-        return res;
+        return ans;
 
     }
 };
