--- a/algorithm/LeetCode/[Hard] 1825. Finding MK Average.md
+++ b/algorithm/LeetCode/[Hard] 1825. Finding MK Average.md
@@ -114,3 +114,78 @@ class MKAverage:
 # obj.addElement(num)
 # param_2 = obj.calculateMKAverage()
 ```
+
+**Solution 2: (Set, rebalance 3 mulitset)**
+```
+Runtime: 181 ms, Beats 38.53%
+Memory: 174.03 MB, Beats 5.97%
+```
+```c++
+class MKAverage {
+    multiset<int> left, right, mid;
+    deque<int> dq;
+    int m, k;
+    long long a = 0;
+    void add(int num) {
+        left.insert(num);
+        if (left.size() > k) {
+            right.insert(*left.rbegin());
+            left.erase(prev(left.end()));
+            if (right.size() > k) {
+                a += *right.begin();
+                mid.insert(*right.begin());
+                right.erase(right.begin());
+            }
+        }
+    }
+    void remove(int num) {
+        if (num >= *mid.begin() && num <= *mid.rbegin()) {
+            a -= num;
+            mid.erase(mid.find(num));
+        } else if (num <= *left.rbegin()) {
+            left.erase(left.find(num));
+        } else {
+            right.erase(right.find(num));
+        }
+        if (left.size() < k) {
+            a -= *mid.begin();
+            left.insert(*mid.begin());
+            mid.erase(mid.begin());
+        }
+        if (right.size() < k) {
+            a -= *mid.rbegin();
+            right.insert(*mid.rbegin());
+            mid.erase(prev(mid.end()));
+        }
+    }
+public:
+    MKAverage(int m, int k) {
+        this->m = m;
+        this->k = k;
+    }
+    
+    void addElement(int num) {
+        if (dq.size() == m) {
+            auto b = dq.front();
+            dq.pop_front();
+            remove(b);
+        }
+        dq.push_back(num);
+        add(num);
+    }
+    
+    int calculateMKAverage() {
+        if (dq.size() < m) {
+            return -1;
+        }
+        return a/(m - 2*k);
+    }
+};
+
+/**
+ * Your MKAverage object will be instantiated and called as such:
+ * MKAverage* obj = new MKAverage(m, k);
+ * obj->addElement(num);
+ * int param_2 = obj->calculateMKAverage();
+ */
+```
