--- a/algorithm/LeetCode/[Hard] 1851. Minimum Interval to Include Each Query.md
+++ b/algorithm/LeetCode/[Hard] 1851. Minimum Interval to Include Each Query.md
@@ -40,35 +40,36 @@ Explanation: The queries are processed as follows:
 
 # Submissions
 ---
-**Solution 1: (Greedy, Heap, Sort)**
+**Solution 1: (Greedy, Heap, Sort, sort then greedy over min heap)**
 ```
-Runtime: 459 ms
-Memory: 113.7 MB
+Runtime: 79 ms, Beats 85.26%
+Memory: 114.58 MB, Beats 96.22%
 ```
 ```c++
 class Solution {
 public:
     vector<int> minInterval(vector<vector<int>>& intervals, vector<int>& queries) {
-        int m = intervals.size(), n = queries.size(), i = 0, left, right;
-        priority_queue<pair<int,int>> pq;
-        sort(intervals.begin(), intervals.end());
-        vector<pair<int,int>> ext_queries;
-        for (int i = 0; i < n; i ++) {
-            ext_queries.push_back({queries[i], i});
+        int m = intervals.size(), n = queries.size(), i = 0, j;
+        vector<array<int,2>> dp(n);
+        priority_queue<array<int,2>, vector<array<int,2>>, greater<>> pq;
+        vector<int> ans(n, -1);
+        for (j = 0; j < n; j ++) {
+            dp[j] = {queries[j], j};
         }
-        sort(ext_queries.begin(), ext_queries.end());
-        vector<int> ans(n);
-        for (auto [q, j]: ext_queries) {
+        sort(dp.begin(), dp.end());
+        sort(intervals.begin(), intervals.end());
+        for (j = 0; j < n; j ++) {
+            auto [q, qj] = dp[j];
             while (i < m && intervals[i][0] <= q) {
-                left = intervals[i][0];
-                right = intervals[i][1];
-                pq.push({-(right-left+1), right});
+                pq.push({intervals[i][1] - intervals[i][0] + 1, intervals[i][1]});
                 i += 1;
             }
-            while (pq.size() && pq.top().second < q) {
+            while (pq.size() && pq.top()[1] < q) {
                 pq.pop();
             }
-            ans[j] = pq.size() ? -pq.top().first : -1;
+            if (pq.size()) {
+                ans[qj] = pq.top()[0];
+            }
         }
         return ans;
     }
