--- a/algorithm/LeetCode/[Hard] 1912. Design Movie Rental System.md
+++ b/algorithm/LeetCode/[Hard] 1912. Design Movie Rental System.md
@@ -105,3 +105,66 @@ class MovieRentingSystem:
 # obj.drop(shop,movie)
 # param_4 = obj.report()`
 ```
+
+**Solution 2: (Hash Table, Set)**
+```
+Runtime: 327 ms, Beats 54.32%
+Memory: 444.49 MB, Beats 22.22%
+```
+```c++
+class MovieRentingSystem {
+    unordered_map<int, unordered_map<int, int>> m;
+    unordered_map<int, set<array<int,2>>> free;
+    set<array<int,3>> work;
+public:
+    MovieRentingSystem(int n, vector<vector<int>>& entries) {
+        for (auto &e: entries) {
+            m[e[0]][e[1]] = e[2];
+            free[e[1]].insert({e[2], e[0]});
+        }
+    }
+    
+    vector<int> search(int movie) {
+        auto it = free[movie].begin();
+        int k = 0;
+        vector<int> rst;
+        while (k < 5 && it != free[movie].end()) {
+            rst.push_back((*it)[1]);
+            it++;
+            k += 1;
+        }
+        return rst;
+    }
+    
+    void rent(int shop, int movie) {
+        free[movie].erase({m[shop][movie], shop});
+        work.insert({m[shop][movie], shop, movie});
+    }
+    
+    void drop(int shop, int movie) {
+        work.erase({m[shop][movie], shop, movie});
+        free[movie].insert({m[shop][movie], shop});
+    }
+    
+    vector<vector<int>> report() {
+        auto it = work.begin();
+        int k = 0;
+        vector<vector<int>> rst;
+        while (k < 5 && it != work.end()) {
+            rst.push_back({(*it)[1], (*it)[2]});
+            it++;
+            k += 1;
+        }
+        return rst;
+    }
+};
+
+/**
+ * Your MovieRentingSystem object will be instantiated and called as such:
+ * MovieRentingSystem* obj = new MovieRentingSystem(n, entries);
+ * vector<int> param_1 = obj->search(movie);
+ * obj->rent(shop,movie);
+ * obj->drop(shop,movie);
+ * vector<vector<int>> param_4 = obj->report();
+ */
+```
