--- a/algorithm/LeetCode/[Hard] 2102. Sequentially Ordinal Rank Tracker.md
+++ b/algorithm/LeetCode/[Hard] 2102. Sequentially Ordinal Rank Tracker.md
@@ -155,3 +155,100 @@ public:
  * string param_2 = obj->get();
  */
 ```
+
+**Solution 3: (Heap, 2 heap, min and max heap)**
+```
+Runtime: 163 ms, Beats 58.44%
+Memory: 156.52 MB, Beats 38.31%
+```
+```c++
+auto left_cmp = [](auto &pa, auto &pb) {
+    if (pa.first != pb.first) {
+        return pa.first > pb.first;
+    }
+    return pa.second < pb.second;
+};
+auto right_cmp = [](auto &pa, auto &pb) {
+    if (pa.first != pb.first) {
+        return pa.first < pb.first;
+    }
+    return pa.second > pb.second;
+};
+class SORTracker {
+    priority_queue<pair<int,string>,vector<pair<int,string>>,decltype(left_cmp)> left;
+    priority_queue<pair<int,string>,vector<pair<int,string>>,decltype(right_cmp)> right;
+    int k;
+public:
+    SORTracker() {
+        k = 0;
+    }
+    
+    void add(string name, int score) {
+        left.push({score, name});
+        if (left.size() >= k) {
+            right.push(left.top());
+            left.pop();
+        }
+    }
+    
+    string get() {
+        auto rst = right.top().second;
+        k += 1;
+        left.push(right.top());
+        right.pop();
+        return rst;
+    }
+};
+
+/**
+ * Your SORTracker object will be instantiated and called as such:
+ * SORTracker* obj = new SORTracker();
+ * obj->add(name,score);
+ * string param_2 = obj->get();
+ */
+```
+
+**Solution 4: (Set, 2 set, min and max set)**
+```
+Runtime: 202 ms, Beats 30.13%
+Memory: 185.22 MB, Beats 5.13%
+```
+```c++
+auto cmp = [](auto &pa, auto &pb) {
+    if (pa.first != pb.first) {
+        return pa.first > pb.first;
+    }
+    return pa.second < pb.second;
+};
+class SORTracker {
+    set<pair<int,string>,decltype(cmp)> left, right;
+    int k;
+public:
+    SORTracker() {
+        k = 0;
+    }
+    
+    void add(string name, int score) {
+        left.insert({score, name});
+        if (left.size() >= k) {
+            right.insert(*left.rbegin());
+            left.erase(prev(left.end()));
+        }
+    }
+    
+    string get() {
+        auto rst = right.begin()->second;
+        k += 1;
+        left.insert(*right.begin());
+        right.erase(right.begin());
+        return rst;
+    }
+};
+
+/**
+ * Your SORTracker object will be instantiated and called as such:
+ * SORTracker* obj = new SORTracker();
+ * obj->add(name,score);
+ * string param_2 = obj->get();
+ */
+```
