--- a/algorithm/LeetCode/[Hard] 2290. Minimum Obstacle Removal to Reach Corner.md
+++ b/algorithm/LeetCode/[Hard] 2290. Minimum Obstacle Removal to Reach Corner.md
@@ -168,43 +168,47 @@ public:
 
 **Solution 4: (BFS, put next level into buffer)**
 ```
-Runtime: 116 ms
-Memory: 117.21 MB
+Runtime: 87 ms, Beats 98.12%
+Memory: 123.86 MB, Beats 35.12%
 ```
 ```c++
 class Solution {
     int dd[5] = {0, 1, 0, -1, 0};
 public:
     int minimumObstacles(vector<vector<int>>& grid) {
-        int m = grid.size(), n = grid[0].size(), nr, nc, ans = 0;
-        vector<vector<bool>> visited(m, vector<bool>(n));
-        queue<pair<int,int>> q, dp;
-        q.push({0, 0});
-        visited[0][0] = true;
+        int m = grid.size(), n = grid[0].size(), d, nr, nc, ans = 0;
+        queue<array<int,2>> q;
+        vector<vector<int>> visited(m, vector<int>(n));
+        vector<array<int,2>> dp;
+        q.push({0,0});
+        visited[0][0] = 1;
         while (q.size()) {
             auto [r, c] = q.front();
             q.pop();
             if (r == m-1 && c == n-1) {
                 return ans;
             }
-            for (int d = 0; d < 4; d++) {
+            for (d = 0; d < 4; d ++) {
                 nr = r + dd[d];
                 nc = c + dd[d+1];
                 if (0 <= nr && nr < m && 0 <= nc && nc < n && !visited[nr][nc]) {
+                    visited[nr][nc] = 1;
                     if (grid[nr][nc] == 0) {
                         q.push({nr, nc});
                     } else {
-                        dp.push({nr,nc});
+                        dp.push_back({nr, nc});
                     }
-                    visited[nr][nc] = true;
                 }
             }
             if (q.size() == 0) {
-                swap(q, dp);
                 ans += 1;
+                while (dp.size()) {
+                    q.push(dp.back());
+                    dp.pop_back();
+                }
             }
         }
-        return -1;
+        return ans;
     }
 };
 ```
