--- a/algorithm/LeetCode/[Hard] 2386. Find the K-Sum of an Array.md
+++ b/algorithm/LeetCode/[Hard] 2386. Find the K-Sum of an Array.md
@@ -58,57 +58,84 @@ class Solution:
         return ans[0]
 ```
 
-**Solution 2: (Heap)**
+**Solution 2: (Heap, Decreasing Subsequence Sums)**
+
+    nums = [2,4,-2], k = 5
+            2,-2,4
+               x
+res     6
+      [2,4,]
+pq         [4,0]
+             1    [2,1][4,1]
+                    3    2 
+                             [0,2][2,2]
+                                       [-2,2][0,2]
+             ^      ^    ^
+           [,4,] [,-2,4]
+                      [2,-2,4]
+
+For this problem, we will start with the sum of all elements, and then subtract increasing subsequence sums (generated using the above approach).
+
+For the above example, the initial sum is 10 ([1, 2, 3, 4]). The next sum is 9 ([2, 3, 4]), then 8 ([1, 3, 4]), and so on.
+
+Of course, we need to use max heap instead of min heap.
+
+4. Handling Negatives
+The initial maximum sum should include all positive elements.
+
+Excluding a positive element from the subsequence is not much different than including a negative element - both operations decrease the sum.
+
+Therefore, we sort the array by absolute values, and also decrease the sum by abs(nums[i + 1]).
+
+case1
+          +        +
+        nums[i] nums[i+1]
+                   
+          +                 
+          ^
+case2
+          +        -
+        nums[i] nums[i+1]
+                   - 
+          +        -          
+          ^
+case3
+          -        +
+        nums[i] nums[i+1]
+          -        
+                            
+          ^
+case4
+          -        -
+        nums[i] nums[i+1]
+          -        - 
+                   -          
+          ^
+
+step1: add all positive
+step2: try to delete all from abs small
+
 ```
-Runtime: 354 ms
-Memory Usage: 64.3 MB
+Runtime: 40 ms, Beats 87.08%
+Memory: 68.13 MB, Beats 56.94%
 ```
 ```c++
 class Solution {
 public:
     long long kSum(vector<int>& nums, int k) {
-        int n = nums.size();
-        long long maxsum = 0;
-	    //subtract stores the sum which needs to be subtracted from the maximum sum
-        vector<long long> subtract;
-        //find the maxsum and update nums so that all elements are positive
-        for(int i=0;i<n;i++){
-            if(nums[i]>=0){
-                maxsum+=nums[i];
-            }else{
-                nums[i] = abs(nums[i]);
+        sort(begin(nums), end(nums), [](int a, int b){ return abs(a) < abs(b); });
+        long long res = accumulate(begin(nums), end(nums), 0LL, [](long long sum, int n){ return sum + max(0, n); });
+        priority_queue<pair<long long, int>> pq;
+        pq.push({res - abs(nums[0]), 0});
+        while(--k) {
+            auto [sum, i] = pq.top(); pq.pop();
+            if (i + 1 < nums.size()) {
+                pq.push({sum - abs(nums[i + 1]), i + 1});
+                pq.push({sum + abs(nums[i]) - abs(nums[i + 1]), i + 1});
             }
+            res = sum;
         }
-        //sorting nums as per absolute values
-        sort(nums.begin(), nums.end());
-        
-        //Initialize priority queue (minheap) to store current least value which needs to be
-        //subtracted from maxsum and the index of nums we are currently at.
-        priority_queue<pair<long long,int>, vector<pair<long long,int>>, greater<pair<long long,int>>> pq;
-        //start from index 0 with minimum value as nums[0]
-        pq.push({nums[0], 0});
-        while(!pq.empty() && subtract.size()<k-1){
-            pair<long long,int> topp = pq.top(); 
-            pq.pop();
-            long long subt = topp.first;
-            int idx = topp.second;
-            //push this value top subtract array
-            subtract.push_back(subt);
-            //if we are not at last idx then we can add further values to pq
-            if(idx<n-1){
-                pq.push({subt+nums[idx+1] , idx+1});
-                pq.push({nums[idx+1] + (subt-nums[idx]) , idx+1});
-            }
-        }
-        
-        //ans stores all the largest sum in decreasing order
-        vector<long long>ans;
-        ans.push_back(maxsum);
-        for(long long subt:subtract) {
-            ans.push_back(maxsum - subt);
-        }
-        //return Kth largest sum 
-        return ans[k-1];
+        return res;
     }
 };
 ```
