--- a/algorithm/LeetCode/[Hard] 2398. Maximum Number of Robots Within Budget.md
+++ b/algorithm/LeetCode/[Hard] 2398. Maximum Number of Robots Within Budget.md
@@ -79,3 +79,34 @@ public:
     }
 };
 ```
+
+**Solution 3: (Sliding Window, multiset)**
+```
+Runtime: 178 ms, Beats 31.83%
+Memory: 153.28 MB, Beats 28.42%
+```
+```c++
+class Solution {
+public:
+    int maximumRobots(vector<int>& chargeTimes, vector<int>& runningCosts, long long budget) {
+        int n = chargeTimes.size(), i = 0, j, ans = 0;
+        long long a = 0, b;
+        multiset<int> st;
+        for (j = 0; j < n; j ++) {
+            st.insert(chargeTimes[j]);
+            a += runningCosts[j];
+            b = (*st.rbegin() + (j-i+1)*a);
+            while (i <= j && b > budget) {
+                a -= runningCosts[i];
+                st.erase(st.find(chargeTimes[i]));
+                if (st.size()) {
+                    b = *st.rbegin() + (j-i+1)*a;
+                }
+                i += 1;
+            }
+            ans = max(ans, j-i+1);
+        }
+        return ans;
+    }
+};
+```
