--- a/algorithm/LeetCode/[Hard] 2454. Next Greater Element IV.md
+++ b/algorithm/LeetCode/[Hard] 2454. Next Greater Element IV.md
@@ -87,7 +87,7 @@ All A[i] is pushed in s1 and s2 at most once.
 Runtime: 1234 ms
 Memory: 28.1 MB
 ```
-```
+```python
 class Solution:
     def secondGreaterElement(self, nums: List[int]) -> List[int]:
         res, s1, s2 = [-1] * len(nums), [], []
@@ -102,27 +102,41 @@ class Solution:
         return res
 ```
 
-**Solution 2: (2 Stack)**
+**Solution 2: (2 Stack, mono stack)**
+
+    0  1  2  3  4
+    3  4  0  9  6
+                ^
+s1  0  1  12 3  
+s2     0     12
+ans 9  6  6
+
 ```
-Runtime: 151 ms
-Memory: 76.9 MB
+Runtime: 13 ms, Beats 93.67%
+Memory: 95.52 MB, Beats 61.14%
 ```
 ```c++
 class Solution {
 public:
     vector<int> secondGreaterElement(vector<int>& nums) {
-        int n = nums.size();
-        vector<int> res(n, -1), s1, s2, tmp;
-        for (int i = 0 ;i < n; ++i) {
-            while (!s2.empty() && nums[s2.back()] < nums[i])
-                res[s2.back()] = nums[i], s2.pop_back();
-            while (!s1.empty() && nums[s1.back()] < nums[i])
-                tmp.push_back(s1.back()), s1.pop_back();
-            while (!tmp.empty())
-                s2.push_back(tmp.back()), tmp.pop_back();
+        int n = nums.size(), i;
+        vector<int> s1, s2, dp, ans(n, -1);
+        for (i = 0; i < n; i ++) {
+            while (s2.size() && nums[s2.back()] < nums[i]) {
+                ans[s2.back()] = nums[i];
+                s2.pop_back();
+            }
+            while (s1.size() && nums[s1.back()] < nums[i]) {
+                dp.push_back(s1.back());
+                s1.pop_back();
+            }
+            while (dp.size()) {
+                s2.push_back(dp.back());
+                dp.pop_back();
+            }
             s1.push_back(i);
         }
-        return res;
+        return ans;
     }
 };
 ```
