--- a/algorithm/LeetCode/[Hard] 2503. Maximum Number of Points From Grid Queries.md
+++ b/algorithm/LeetCode/[Hard] 2503. Maximum Number of Points From Grid Queries.md
@@ -118,3 +118,55 @@ public:
     }
 };
 ```
+
+**Solution 3: (Sort, Heap, BFS)**
+```
+Runtime: 52 ms, Beats 97.48%
+Memory: 51.16 MB, Beats 41.89%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+public:
+    vector<int> maxPoints(vector<vector<int>>& grid, vector<int>& queries) {
+        int m = grid.size(), n = grid[0].size(), i, k = queries.size(), ck = 0, nr, nc, d;
+        priority_queue<array<int, 3>, vector<array<int, 3>>, greater<>> pq;
+        queue<array<int, 2>> q;
+        vector<vector<bool>> visited(m, vector<bool>(n));
+        vector<array<int, 2>> dp;
+        vector<int> ans(k);
+        for (i = 0; i < k; i ++) {
+            dp.push_back({queries[i], i});
+        }
+        sort(dp.begin(), dp.end());
+        pq.push({grid[0][0], 0, 0});
+        visited[0][0] = true;
+        for (i = 0; i < k; i ++) {
+            while (pq.size() && dp[i][0] > pq.top()[0]) {
+                auto [_, r, c] = pq.top();
+                pq.pop();
+                q.push({r, c});
+                while (q.size()) {
+                    auto [qr, qc] = q.front();
+                    q.pop();
+                    ck += 1;
+                    for (d = 0; d < 4; d ++) {
+                        nr = qr + dd[d];
+                        nc = qc + dd[d + 1];
+                        if (0 <= nr && nr < m && 0 <= nc && nc < n && !visited[nr][nc]) {
+                            if (grid[nr][nc] < dp[i][0]) {
+                                q.push({nr, nc});
+                            } else {
+                                pq.push({grid[nr][nc], nr, nc});
+                            }
+                            visited[nr][nc] = true;
+                        }
+                    }
+                }
+            }
+            ans[dp[i][1]] = ck;
+        }
+        return ans;
+    }
+};
+```
