--- a/algorithm/LeetCode/[Easy] 3000. Maximum Area of Longest Diagonal Rectangle.md
+++ b/algorithm/LeetCode/[Easy] 3000. Maximum Area of Longest Diagonal Rectangle.md
@@ -35,20 +35,21 @@ Explanation: Length of diagonal is the same for both which is 5, so maximum area
 ---
 **Solution 1: (Brute Force)**
 ```
-Runtime: 17 ms
-Memory: 25.9 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 29.09 MB, Beats 99.72%
 ```
 ```c++
 class Solution {
 public:
     int areaOfMaxDiagonal(vector<vector<int>>& dimensions) {
-        int mx = INT_MIN, ans = 0;
-        for (auto v: dimensions) {
-            if (v[0]*v[0] + v[1]*v[1] > mx) {
-                mx = v[0]*v[0] + v[1]*v[1];
-                ans = v[0]*v[1];
-            } else if (v[0]*v[0] + v[1]*v[1] == mx) {
-                ans = max(ans, v[0]*v[1]);
+        int a, ans = 0, pre = 0;
+        for (auto &d: dimensions) {
+            a = d[0]*d[0] + d[1]*d[1];
+            if (a > pre) {
+                pre = a;
+                ans = d[0]*d[1];
+            } else if (a == pre) {
+                ans = max(ans, d[0]*d[1]);
             }
         }
         return ans;
