--- a/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
+++ b/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
@@ -184,47 +184,43 @@ public:
 
 **Solution 4: (Heap)**
 ```
-Runtime: 74 ms, Beats 65.07%
-Memory: 98.20 MB, Beats 56.92%
+Runtime: 71 ms, Beats 67.54%
+Memory: 98.06 MB, Beats 90.79%
 ```
 ```c++
 class Solution {
 public:
     int mostBooked(int n, vector<vector<int>>& meetings) {
-        int m = meetings.size(), i, a = 0, ans;
-        long long t = -1;
+        int m = meetings.size(), i, j, ans;
+        long long cur = -1, mx = 0;
         sort(meetings.begin(), meetings.end());
-        priority_queue<array<long long,2>, vector<array<long long,2>>, greater<>> pq;
-        priority_queue<int,vector<int>,greater<>> free;
-        vector<int> cnt(n);
-        for (i = 1; i < n; i ++) {
+        priority_queue<pair<long long, int>, vector<pair<long long, int>>, greater<>> work;
+        priority_queue<int, vector<int>, greater<>> free;
+        for (i = 0; i < n; i ++) {
             free.push(i);
         }
-        pq.push({meetings[0][1], 0});
-        cnt[0] = 1;
-        for (i = 1; i < m; i ++) {
-            t = max(t, (long long)meetings[i][0]);
-            if (!free.size()) {
-                auto [ct, j] = pq.top();
-                pq.pop();
-                t = max(t, ct);
-                free.push(j);
+        vector<int> cnt(n);
+        for (i = 0; i < m; i ++) {
+            cur = max(cur, (long long)meetings[i][0]);
+            if (free.size() == 0) {
+                cur = max(cur, work.top().first);
+                free.push(work.top().second);
+                work.pop();
             }
-            while (pq.size() && pq.top()[0] <= t) {
-                auto [_, j] = pq.top();
-                pq.pop();
-                free.push(j);
+            while (work.size() && work.top().first <= cur) {
+                free.push(work.top().second);
+                work.pop();
             }
-            auto nj = free.top();
+            auto m = free.top();
             free.pop();
-            pq.push({t + (meetings[i][1] - meetings[i][0]), nj});
-            cnt[nj] += 1;
-        }
-        for (i = 0; i < n; i ++) {
-            if (cnt[i] > a) {
-                a = cnt[i];
-                ans = i;
+            cnt[m] += 1;
+            if (cnt[m] > mx) {
+                mx = cnt[m];
+                ans = m;
+            } else if (cnt[m] == mx) {
+                ans = min(ans, m);
             }
+            work.push({cur + meetings[i][1] - meetings[i][0], m});
         }
         return ans;
     }
