--- a/algorithm/LeetCode/[Hard] 3459. Length of Longest V-Shaped Diagonal Segment.md
+++ b/algorithm/LeetCode/[Hard] 3459. Length of Longest V-Shaped Diagonal Segment.md
@@ -119,3 +119,49 @@ class Solution:
                     res = max(res, cur)
         return res
 ```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 230 ms, Beats 85.03%
+Memory: 103.34 MB, Beats 74.33%
+```
+```c++
+class Solution {
+    int dx[4] = {1, 1, -1, -1};
+    int dy[4] = {1, -1, -1, 1};
+    int dp[500][500][4][2];
+    int dfs(int i, int j, int d, bool is_turn, int target, vector<vector<int>> &grid) {
+        int m = grid.size(), n = grid[0].size(), ni, nj;
+        ni = i + dx[d];
+        nj = j + dy[d];
+        if (ni < 0 || nj < 0 || ni >= m || nj >= n || grid[ni][nj] != target) {
+            return 0;
+        }
+        if (dp[ni][nj][d][is_turn] != -1) {
+            return dp[ni][nj][d][is_turn];
+        }
+        int rst = dfs(ni, nj, d, is_turn, 2 - target, grid);
+        if (is_turn) {
+            rst = max(rst, dfs(ni, nj, (d + 1)%4, false, 2 - target, grid));
+        }
+        rst += 1;
+        dp[ni][nj][d][is_turn] = rst;
+        return rst;
+    };
+public:
+    int lenOfVDiagonal(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), i, j, ni, nj, d, ans = 0;
+        memset(dp, -1, sizeof(dp));
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                if (grid[i][j] == 1) {
+                    for (d = 0; d < 4; d ++) {
+                        ans = max(ans, dfs(i, j, d, true, 2, grid) + 1);
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
