update LeetCode Weekly Contest 466

--- a/algorithm/LeetCode/[Easy] 1304. Find N Unique Integers Sum up to Zero.md
+++ b/algorithm/LeetCode/[Easy] 1304. Find N Unique Integers Sum up to Zero.md
@@ -71,3 +71,30 @@ public:
     }
 };
 ```
+
+**Solution 3: (Math)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 9.69 MB, Beats 53.26%
+```
+```c++
+class Solution {
+public:
+    vector<int> sumZero(int n) {
+        vector<int> ans(n);
+        int i = 0, k = 1;
+        if (n % 2) {
+            ans[i++] = 0;
+            n -= 1;
+        }
+        k = 1;
+        while (n) {
+            ans[i++] = -k;
+            ans[i++] = k;
+            k += 1;
+            n -= 2;
+        }
+        return ans;
+    }
+};
+```
