--- a/algorithm/LeetCode/[Hard] 2532. Time to Cross a Bridge.md
+++ b/algorithm/LeetCode/[Hard] 2532. Time to Cross a Bridge.md
@@ -107,3 +107,87 @@ class Solution:
                 note += 1
         return tmstamp
 ```
+
+**Solution 2: (Priority Queue Simulation, 4 Heap)**
+
+__Approach__
+Maintain 4 priority queues:
+left - min efficiency on left
+right - min efficiency on right
+up - workers picking up boxes on right sorted by increasing time of completion
+down - workers putting down boxes on left sorted by increasing time of completion
+
+__Complexity__
+Time complexity:
+O(NlogN)
+Space complexity:
+O(N)
+
+```
+Runtime: 30 ms, Beats 74.14%
+Memory: 25.78 MB, Beats 77.59%
+```
+```c++
+class Solution {
+public:
+    int findCrossingTime(int n, int k, vector<vector<int>>& time) {
+        priority_queue<pair<int, int>> left, right;
+        priority_queue<pair<int, int>, vector<pair<int, int>>, greater<pair<int, int>>> up, down;
+        for (int i = 0; i < time.size(); i++) {
+            left.push({time[i][0] + time[i][2], i});
+        }
+        int t = 0;
+        while (n > 0) {
+            if (!right.empty()) {
+                auto [_, j] = right.top();
+                right.pop();
+                t += time[j][2];
+                down.push({t + time[j][3], j});
+            } else if (!left.empty()) {
+                auto [_, j] = left.top();
+                left.pop();
+                t += time[j][0];
+                n--;
+                up.push({t + time[j][1], j});
+            } else { 
+                if (up.empty()) {
+                    t = down.top().first;
+                } else if (down.empty()) {
+                    t = up.top().first;
+                } else {
+                    auto [t1, _] = up.top();
+                    auto [t2, _] = down.top();
+                    t = min(t1, t2);
+                }
+            }
+            while (!up.empty() && up.top().first <= t) {
+                auto [_, j] = up.top();
+                up.pop();
+                right.push({time[j][0] + time[j][2], j});
+            }
+            while (!down.empty() && down.top().first <= t) {
+                auto [_, j] = down.top();
+                down.pop();
+                left.push({time[j][0] + time[j][2], j});
+            }
+        }
+        while (!right.empty()) {
+            auto [_, j] = right.top();
+            right.pop();
+            t += time[j][2];
+            while (!up.empty() && up.top().first <= t) {
+                auto [_, j] = up.top();
+                up.pop();
+                right.push({time[j][0] + time[j][2], j});
+            }
+        }
+        while (!up.empty()) {
+            auto [tj, j] = up.top();
+            up.pop();
+            t = max(t, tj);
+            t += time[j][2];
+        }
+        return t;
+    }
+};
+```
