--- a/algorithm/LeetCode/[Hard] 2617. Minimum Number of Visited Cells in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 2617. Minimum Number of Visited Cells in a Grid.md
@@ -49,32 +49,43 @@ Explanation: It can be proven that no path exists.
 
 # Submissions
 ---
-**Solution 1: (BFS with Skip Ahead)**
+**Solution 1: (BFS, Set)**
 ```
-Runtime: 382 ms
-Memory: 134.8 MB
+Runtime: 1239 ms, Beats 30.41%
+Memory: 435.74 MB, Beats 39.17%
 ```
 ```c++
 class Solution {
 public:
     int minimumVisitedCells(vector<vector<int>>& grid) {
-        int m = grid.size(), n = grid[0].size(), steps = 0;
-        vector<int> max_i(n), max_j(m);
-        vector<pair<int, int>> q{{0, 0}}, q1;
-        while (!q.empty()) {
-            ++steps;
-            for (auto [i, j] : q) {
-                if (i == m - 1 && j == n - 1)
-                    return steps;
-                for (int k = max(max_i[j], i) + 1; k < m && k - i <= grid[i][j]; ++k)
-                    q1.push_back({k, j});
-                for (int k = max(max_j[i], j) + 1; k < n && k - j <= grid[i][j]; ++k)
-                    q1.push_back({i, k});
-                max_i[j] = max(max_i[j], i + grid[i][j]);
-                max_j[i] = max(max_j[i], j + grid[i][j]);
+        int m = grid.size(), n = grid[0].size();
+        vector<set<int>> right(m), down(n);
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                right[i].insert(j);
+                down[j].insert(i);
             }
-            swap(q, q1);
-            q1.clear();
+        }
+        queue<array<int, 3>> q;
+        q.push({0, 0, 1});
+        while (!q.empty()) {
+            auto [i, j, d] = q.front();
+            q.pop();
+            if (i == m - 1 && j == n - 1) {
+                return d;
+            }
+            auto it = right[i].lower_bound(j + 1);
+            while (it != right[i].end() && *it <= j + grid[i][j]) {
+                q.push({i, *it, d + 1});
+                down[*it].erase(i);
+                right[i].erase(it++);
+            }
+            it = down[j].lower_bound(i + 1);
+            while (it != down[j].end() && *it <= i + grid[i][j]) {
+                q.push({*it, j, d + 1});
+                right[*it].erase(j);
+                down[j].erase(it++);
+            }
         }
         return -1;
     }
