--- a/algorithm/LeetCode/[Hard] 2642. Design Graph With Shortest Path Calculator.md
+++ b/algorithm/LeetCode/[Hard] 2642. Design Graph With Shortest Path Calculator.md
@@ -175,3 +175,55 @@ public:
  * int param_2 = obj->shortestPath(node1,node2);
  */
 ```
+
+**Solution 4: (Dijkstra)**
+```
+Runtime: 51 ms, Beats 84.26%
+Memory: 82.23 MB, Beats 69.03%
+```
+```c++
+class Graph {
+    vector<vector<array<int, 2>>> g;
+    vector<int> dist;
+public:
+    Graph(int n, vector<vector<int>>& edges) {
+        g.resize(n);
+        for (auto &e: edges) {
+            g[e[0]].push_back({e[1], e[2]});
+        }
+        dist.resize(n);
+    }
+    
+    void addEdge(vector<int> edge) {
+        g[edge[0]].push_back({edge[1], edge[2]});
+    }
+    
+    int shortestPath(int node1, int node2) {
+        priority_queue<array<int, 2>, vector<array<int, 2>>, greater<>> pq;
+        pq.push({0, node1});
+        fill(dist.begin(), dist.end(), INT_MAX);
+        dist[node1] = 0;
+        while (pq.size()) {
+            auto [w, u] = pq.top();
+            pq.pop();
+            if (u == node2) {
+                return w;
+            }
+            for (auto [v, dw]: g[u]) {
+                if (dist[v] > w + dw) {
+                    dist[v] = w + dw;
+                    pq.push({w + dw, v}); 
+                }
+            }
+        }
+        return -1;
+    }
+};
+
+/**
+ * Your Graph object will be instantiated and called as such:
+ * Graph* obj = new Graph(n, edges);
+ * obj->addEdge(edge);
+ * int param_2 = obj->shortestPath(node1,node2);
+ */
+```
