update LeetCode Biweekly Contest 165

--- a/algorithm/LeetCode/[Easy] 1317. Convert Integer to the Sum of Two No-Zero Integers.md
+++ b/algorithm/LeetCode/[Easy] 1317. Convert Integer to the Sum of Two No-Zero Integers.md
@@ -58,3 +58,34 @@ class Solution:
     def getNoZeroIntegers(self, n: int) -> List[int]:
         return next([a, n-a] for a in range(n) if '0' not in f'{a}{n-a}')
 ```
+
+**Solution 2: (Math, Brute Force)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.28 MB, Beats 59.59%
+```
+```c++
+class Solution {
+    bool check(int num) {
+        int b = 1;
+        while (b <= num) {
+            if ((num / b) % 10 == 0) {
+                return false;
+            }
+            b *= 10;
+        }
+        return true;
+    }
+public:
+    vector<int> getNoZeroIntegers(int n) {
+        int a, b;
+        for (a = 1; a <= n/2; a ++) {
+            b = n - a;
+            if (check(a) && check(b)) {
+                return {a, b};
+            }
+        }
+        return {};
+    }
+};
+```
