--- a/algorithm/LeetCode/[Easy] 3541. Find Most Frequent Vowel and Consonant.md
+++ b/algorithm/LeetCode/[Easy] 3541. Find Most Frequent Vowel and Consonant.md
@@ -74,3 +74,28 @@ public:
     }
 };
 ```
+
+**Solution 2: (Counter)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 9.17 MB, Beats 96.23%
+```
+```c++
+class Solution {
+public:
+    int maxFreqSum(string s) {
+        int i, a = 0, b = 0;
+        int cnt[26] = {0};
+        string vowels = "aeiou";
+        for (auto &c: s) {
+            cnt[c - 'a'] += 1;
+            if (c == 'a' || c == 'e' || c == 'i' || c == 'o' || c == 'u') {
+                a = max(a, cnt[c - 'a']);
+            } else {
+                b = max(b, cnt[c - 'a']);
+            }
+        }
+        return a + b;
+    }
+};
+```
