--- a/algorithm/LeetCode/[Hard] 2699. Modify Graph Edge Weights.md
+++ b/algorithm/LeetCode/[Hard] 2699. Modify Graph Edge Weights.md
@@ -500,3 +500,75 @@ public:
     }
 };
 ```
+
+**Solution 6: (Dijkstra, step by step add edge)**
+```
+Runtime: 228 ms, Beats 61.74%
+Memory: 243.31 MB, Beats 77.83%
+```
+```c++
+class Solution {
+    int get(int source, int destination, vector<vector<array<int, 2>>> &g) {
+        int n = g.size(), nw;
+        priority_queue<array<int, 2>, vector<array<int, 2>>, greater<>> pq;
+        vector<int> dist(n, INT_MAX);
+        pq.push({0, source});
+        dist[source] = 0;
+        while (pq.size()) {
+            auto [w, u] = pq.top();
+            pq.pop();
+            if (u == destination) {
+                break;
+            }
+            for (auto [v, dw]: g[u]) {
+                nw = w + dw;
+                if (dist[v] > nw) {
+                    dist[v] = nw;
+                    pq.push({nw, v});
+                }
+            }
+        }
+        return dist[destination];
+    }
+public:
+    vector<vector<int>> modifiedGraphEdges(int n, vector<vector<int>>& edges, int source, int destination, int target) {
+        int i, a;
+        bool flag = false;
+        vector<vector<array<int, 2>>> g(n);
+        for (i = 0; i < edges.size(); i++) {
+            if (edges[i][2] != -1) {
+                g[edges[i][0]].push_back({edges[i][1], edges[i][2]});
+                g[edges[i][1]].push_back({edges[i][0], edges[i][2]});
+            }
+        }
+        a = get(source, destination, g);
+        if (a < target) {
+            return {};
+        }
+        flag = a == target;
+        for (auto &e: edges) {
+            if (e[2] != -1) {
+                continue;
+            }
+            if (flag) {
+                e[2] = (int)1e9;
+            } else {
+                e[2] = 1;
+            }
+            g[e[0]].push_back({e[1], e[2]});
+            g[e[1]].push_back({e[0], e[2]});
+            if (!flag) {
+                a = get(source, destination, g);
+                if (a <= target) {
+                    e[2] += target - a;
+                    flag = true;
+                }
+            }
+        }
+        if (flag) {
+            return edges;
+        }
+        return {};
+    }
+};
+```
