--- a/algorithm/LeetCode/[Hard] 2813. Maximum Elegance of a K-Length Subsequence.md
+++ b/algorithm/LeetCode/[Hard] 2813. Maximum Elegance of a K-Length Subsequence.md
@@ -115,3 +115,39 @@ public:
     }
 };
 ```
+
+**Solution 2: (Sort by Profit)**
+```
+Runtime: 89 ms, Beats 74.77%
+Memory: 186.30 MB, Beats 89.72%
+```
+```c++
+class Solution {
+public:
+    long long findMaximumElegance(vector<vector<int>>& items, int k) {
+        int n = items.size(), i;
+        long long a = 0, ans = 0;
+        unordered_set<int> st;
+        vector<int> dp;
+        sort(items.begin(), items.end());
+        for (i = n-1; i >= 0; i--) {
+            if (i >= n - k) {
+                a += items[i][0];
+                if (st.count(items[i][1])) {
+                    dp.push_back(items[i][0]);
+                }
+                st.insert(items[i][1]);
+            } else if (!st.count(items[i][1])) {
+                if (dp.size() == 0) {
+                    break;
+                }
+                a += items[i][0] - dp.back();
+                dp.pop_back();
+                st.insert(items[i][1]);
+            }
+            ans = max(ans, a + (long long)st.size() * (long long)st.size());
+        }
+        return ans;
+    }
+};
+```
