--- a/algorithm/LeetCode/[Hard] 2931. Maximum Spending After Buying Items.md
+++ b/algorithm/LeetCode/[Hard] 2931. Maximum Spending After Buying Items.md
@@ -109,3 +109,34 @@ public:
     }
 };
 ```
+
+**Solution 3: (Heap)**
+```
+Runtime: 35 ms, Beats 77.52%
+Memory: 56.90 MB, Beats 71.01%
+```
+```c++
+class Solution {
+public:
+    long long maxSpending(vector<vector<int>>& values) {
+        int m = values.size(), n = values[0].size(), i, d = 1;
+        long long ans = 0;
+        vector<int> dp(m, n-1);
+        priority_queue<array<long long, 2>, vector<array<long long, 2>>, greater<>> pq;
+        for (i = 0; i < m; i++) {
+            pq.push({values[i][n-1], i});
+        }
+        while (pq.size()) {
+            auto [a, j] = pq.top();
+            pq.pop();
+            ans += a * d;
+            dp[j] -= 1;
+            if (dp[j] >= 0) {
+                pq.push({values[j][dp[j]], j});
+            }
+            d += 1;
+        }
+        return ans;
+    }
+};
+```
