--- a/algorithm/LeetCode/[Hard] 2940. Find Building Where Alice and Bob Can Meet.md
+++ b/algorithm/LeetCode/[Hard] 2940. Find Building Where Alice and Bob Can Meet.md
@@ -180,3 +180,48 @@ public:
     }
 };
 ```
+
+**Solution 4: (Mono Stack, Binary Search)**
+```
+Runtime: 92 ms, Beats 85.13%
+Memory: 275.05 MB, Beats 42.14%
+```
+```c++
+class Solution {
+public:
+    vector<int> leftmostBuildingQueries(vector<int>& heights, vector<vector<int>>& queries) {
+        int m = heights.size(), n = queries.size(), i, j;
+        vector<int> ans(n);
+        vector<array<int, 3>> dp;
+        vector<array<int, 2>> stk;
+        for (i = 0; i < n; i ++) {
+            if (queries[i][0] > queries[i][1]) {
+                swap(queries[i][0], queries[i][1]);
+            }
+            if (heights[queries[i][0]] < heights[queries[i][1]] || queries[i][0] == queries[i][1]) {
+                ans[i] = queries[i][1];
+            } else {
+                dp.push_back({queries[i][1], heights[queries[i][0]], i});
+            }
+        }
+        sort(dp.begin(), dp.end());
+        j = dp.size() - 1;
+        for (i = m - 1; i >= 0; i --) {
+            while (j >= 0 && dp[j][0] == i) {
+                auto it = lower_bound(stk.rbegin(), stk.rend(), array<int, 2>{dp[j][1] + 1, -1});
+                if (it != stk.rend()) {
+                    ans[dp[j][2]] = (*it)[1];
+                } else {
+                    ans[dp[j][2]] = -1;
+                }
+                j -= 1;
+            }
+            while (stk.size() && stk.back()[0] <= heights[i]) {
+                stk.pop_back();
+            }
+            stk.push_back({heights[i], i});
+        }
+        return ans;
+    }
+};
+```
