--- a/algorithm/LeetCode/[Hard] 2973. Find Number of Coins to Place in Tree Nodes.md
+++ b/algorithm/LeetCode/[Hard] 2973. Find Number of Coins to Place in Tree Nodes.md
@@ -79,3 +79,59 @@ class Solution:
         dfs(0, 0)
         return res
 ```
+
+**Solution 2: (DFS, post order, sort, track largest 3 and smallest 3 element)**
+```
+Runtime: 604 ms, Beats 47.88%
+Memory: 266.12 MB, Beats 83.03%
+```
+```c++
+class Solution {
+    pair<vector<int>, vector<int>> dfs(int u, int p, vector<vector<int>> &g, vector<int> &cost, vector<long long> &ans) {
+        pair<vector<int>, vector<int>> rst;
+        rst.first.push_back(u);
+        rst.second.push_back(u);
+        for (auto &v: g[u]) {
+            if (v != p) {
+                auto [pa, pb] = dfs(v, u, g, cost, ans);
+                rst.first.insert(rst.first.end(), pa.begin(), pa.end());
+                rst.second.insert(rst.second.end(), pb.begin(), pb.end());
+            }
+        }
+        if (rst.first.size() < 3) {
+            for (auto &v: rst.first){
+                ans[v] = 1;
+            }
+            return rst;
+        }
+        sort(rst.first.begin(), rst.first.end(), [&](auto &v1, int &v2){
+            return cost[v1] > cost[v2];
+        });
+        sort(rst.second.begin(), rst.second.end(), [&](auto &v1, auto &v2){
+            return cost[v1] < cost[v2];
+        });
+        rst.first.resize(min(3, (int)rst.first.size()));
+        rst.second.resize(min(3, (int)rst.second.size()));
+        long long a = max(1LL * cost[rst.first[0]] * cost[rst.first[1]] * cost[rst.first[2]],
+                            1LL * cost[rst.second[0]] * cost[rst.second[1]] * cost[rst.first[0]]);
+        if (a < 0) {
+            ans[u] = 0;
+        } else {
+            ans[u] = a;
+        }
+        return rst;
+    }
+public:
+    vector<long long> placedCoins(vector<vector<int>>& edges, vector<int>& cost) {
+        int n = edges.size() + 1;
+        vector<vector<int>> g(n);
+        vector<long long> ans(n);
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        dfs(0, -1, g, cost, ans);
+        return ans;
+    }
+};
+```
